# ctfa

./: .gitignore  AUTHORS  README.md  pyproject.toml
src/CTFA/: ctfa.py  kernels.py  utility.py
